# longmem

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: announcement-en.md
examples/: README.md  basic.py  web_demo.py
examples/static/: index.html
longmem/: __init__.py  api.py  cli.py  config.py  db.py  embed.py  models.py  store.py  summarize.py
tests/: test_store.py
