[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "longmem"
version = "0.1.0"
description = "Lightweight long-term memory middleware for LLM apps and agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "fastapi",
    "uvicorn",
    "psycopg2-binary",
    "openai",
    "python-dotenv",
    "pydantic",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest", "requests"]

[project.scripts]
longmem = "longmem.cli:main"

[tool.setuptools.packages.find]
include = ["longmem*"]
